너무 css에 신경쓰지말자

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
 
+<!--    모바일 표시 이러한 거도 있구나 알 수 있다. 지금 너무 css에 신경쓸려고 하는데 그러지말자 안 예뻐도 된다.-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!--    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">-->
 
     <meta property="og:title" content="항해 도전!!">
     <meta property="og:description" content="나만의 항해 일지!">
