--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -68,7 +68,7 @@
 
     //전체 목록 조회
     function getMessages() {
-        // $('#cards-box').empty();
+        $('#cards-box').empty();
         $.ajax({
             type: "GET",
             url: "/api/blogs",
